# gtk-calculator

./: CMakeLists.txt  README.md  events.c  events.h  main.c  main.ui  widgets.c  widgets.h
